Fix logo padding on mobile

--- a/src/layouts/Main.scss
+++ b/src/layouts/Main.scss
@@ -31,5 +31,9 @@
 		& > main {
 			padding: 0;
 		}
+
+		& > header{
+			padding:0;
+		}
 	}
 }
